Fixed broken animation on Safari for pushy slide-out

--- a/assets/sass/externals/_pushy.scss
+++ b/assets/sass/externals/_pushy.scss
@@ -46,15 +46,18 @@
 } */
 
 .pushy--right {
-    transform: translate3d(200px,0,0);
+    -webkit-transform: translate3d(18.75em,0,0);
+    transform: translate3d(18.75em,0,0);
     }
 
 .pushy--open {
+    -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
     }
 
 .container--push,
 .push--push {
+    -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
     }
 
@@ -62,6 +65,7 @@
 .pushy,
 .container,
 .push {
+    -webkit-transition: -webkit-transform .2s cubic-bezier(.16, .68, .43, .99);
     transition: transform .2s cubic-bezier(.16, .68, .43, .99);
     /* improves performance issues on mobile*/
     -webkit-backface-visibility: hidden;
